--- a/Ajax/10.文件下载.md
+++ b/Ajax/10.文件下载.md
@@ -7,7 +7,7 @@
 
     var auchor = document.createElement('a');
     auchor.download = 'fileName';
-    auchor.hrel = url;
+    auchor.href = url;
     auchor.click();
 
 ###  转换url
