--- a/CSS/4.css其他选择器.md
+++ b/CSS/4.css其他选择器.md
@@ -16,9 +16,6 @@ css其他选择器
     E[attr$="val"]	 选取了元素E，其中E元素定义了属性att，att属性值是以val结尾的任何字符串。
     E[attr*="val"]	选取了元素E，其中E元素定义了属性att，att属性值任意位置是包含了val的任何字符串。
 
-
-优先级：行内样式>id选择器>类选择器>属性选择器
-
 ###  伪元素选择器
 
     E::first-letter{};
@@ -70,5 +67,11 @@ n可以是具体的数，可以是odd（奇数）或even（偶数），也可以
 这两句效果相同，都是选择ul元素内的偶数li标签。
 
 
+### 权重
 
+css选择器的优先级，是按照：
+1.id选择器
+2.类选择器，伪类选择器，属性选择器
+3.元素选择器，伪元素选择器
+这个顺序，依次对比每个梯次内选择器总量来决定权重。
 
