--- a/ES6/13.promise.md
+++ b/ES6/13.promise.md
@@ -9,7 +9,7 @@ const promise = new Promise(function(resolve, reject) {
 ```
 Promise构造函数接受一个函数作为参数，这个参函数也有两个参数resolve和reject，它们也是函数。resolve函数将Promise对象的状态从“未完成pending”变为“成功fulfilled”，所以在异步操作成功时调用；reject函数将Promise对象的状态从“未完成pending”变为“失败rejected”，所以在异步操作失败时调用，这两个函数都可以传递参数。
 
-then方法是Promise对象“成功”和“失败”的回调函数。有两个函数作为参数，这两个参函数分别接受resolved（成功）状态和rejected（失败）状态传递的值为参数：
+then方法是Promise对象方法，接收两个回调函数作为参数。分别对应Promise为fulfilled时，调用第一个参数执行，当Promise为rejected时，调用第二个参数执行：
 ```
 promise.then(function(value) {
   // 异步成功后需要执行的代码
@@ -17,9 +17,8 @@ promise.then(function(value) {
   // 异步失败后需要执行的代码
 });
 ```
-第二个函数是可选的，不一定要提供。
 
-注意：**Promise 创建后就会立即执行，自身是同步的，then是异步的**。所以，用Promise的时候一般是包在一个函数中，在需要的时候去运行这个函数，如：
+注意：**Promise 创建后就会立即执行，自身是同步的**。所以，用Promise的时候一般是包在一个函数中，在需要的时候去运行这个函数，如：
 ```
 function runPromise(){
     const promise = new Promise(function(resolve, reject) {
@@ -55,8 +54,8 @@ loadImageAsync("imgSrc").then(function(value){
   console.error(error)
 })
 ```
-###  链式调用
-then支持执行链式调用：
+###  then方法
+then方法的返回值是一个new Promise()，所以支持执行链式调用：
 ```
 doSomething().then(function(result) {
   return doSomethingElse(result);
@@ -66,9 +65,16 @@ doSomething().then(function(result) {
 })
 .catch(failureCallback);
 ```
-如果前一个then，返回值还是一个Promise对象，那么后一个then，就会等待该Promise对象的状态发生变化，才会被调用。
+这个新promise的状态由then内回调函数的返回值决定。
 
-如果要跳出链式调用，需要返回pedding状态的promise。
+```
+let promise = doSomething().then(function(result) {
+  return doSomethingElse(result);
+})
+promise相当于Promise.resolve( doSomethingElse(result) )
+```
+如果返回值为promise对象，则会等到这个promise有结果了，再执行后一个then。
+所以，如果返回pedding状态的promise，会跳出链式调用。
 ```
 promise.then(()=>{
   return new Promise(()=>{})
@@ -101,6 +107,27 @@ Promise 内部的错误会终止后续所有then的运行，并传递到catch内
 ###  finally方法
 一般放在实例链的最后，不管 Promise 对象最后状态如何，都会执行的操作，finally方法没有参数。
 
+###  静态resolve()、reject()
+Promise.resolve()会返回一个Promise 对象，**状态由根据传入的参数决定**。
+如果参数是一个 Promise 实例，那么返回这个实例。或者参数是具有 then 方法的对象，那么返回 Promise 对象，并调用then()。其他就返回一个resolved状态的 Promise 对象。
+
+**then方法和catch方法返回 Promise 对象的状态也是这样**。
+
+Promise.reject()方法返回的 Promise 状态为rejected。
+```
+setTimeout(function () {
+  //宏队列
+  console.log('third')
+}, 0);
+
+Promise.resolve().then(function () {
+  //微队列
+  console.log('second')
+});
+
+console.log('first')
+```
+
 ###  静态all方法
 all()方法将多个 Promise 实例的数组合成一个新的 Promise 实例。
 ```
@@ -130,28 +157,6 @@ p
 
 ###  静态any方法
 如果所有参数实例都变成rejected状态，包装实例就会变成rejected状态，值保存在err.errors数组，否则状态为resolve，并返回第一个状态resolve的promise。
-
-###  静态resolve()、reject()
-Promise.resolve()会返回一个Promise 对象，**状态由根据传入的参数决定**。
-如果参数是一个 Promise 实例，那么返回这个实例。或者参数是具有 then 方法的对象，那么返回 Promise 对象，并调用then()。其他就返回一个resolved状态的 Promise 对象。
-
-**then方法和catch方法返回 Promise 对象的状态也是这样**。
-
-Promise.reject()方法返回的 Promise 状态为rejected。
-这个状态改变发生在本轮事件循环（event loop）的结尾。
-```
-setTimeout(function () {
-  //下轮事件循环执行
-  console.log('third')
-}, 0);
-
-Promise.resolve().then(function () {
-  //本轮事件循环结尾执行
-  console.log('second')
-});
-
-console.log('first')
-```
 
 ###  静态allSettled方法
 和实例方法finally类似，allSettled不管每一个promise是成功还是失败，总会在所有的都状态改变后，返回状态为resolve的promise，then的参数是每一个的执行情况组成的数组。
