--- a/JS/18.JS事件.md
+++ b/JS/18.JS事件.md
@@ -233,7 +233,8 @@ load:加载事件,在文档加载完毕再执行的事件。
 scroll:滚动事件
 
 
-###  节流
+###  节流和防抖
+**节流throttle**
 节流是一段时间内，只执行一次事件，事件触发有CD，不会频繁触发。
 ```
 let timer = undefined;  //节流定时器
@@ -248,7 +249,7 @@ btn.addEventListener('click',()=>{
 })
 ```
 
-###  防抖
+**防抖debounce**
 防抖是在事件触发时，有延迟时间再执行，在等待过程中，如果事件又触发了，则重置等待时间。
 ```
 let timer = undefined;  //防抖定时器
@@ -263,5 +264,31 @@ btn.addEventListener('click',(e)=>{
 	},200)
 })
 ```
+防抖的应用场景，主要是自动发送请求的搜索框。
+
+**闭包形式**
+上面节流和防抖暴露了一个全局变量，可以修改为闭包形式：
+
+```
+div.addEventListener('click',throttle(add,10))
+
+function add(num,e){
+    console.log(e);
+    this.innerText+=num
+}
+
+function throttle(fn,param){
+    let timeout = null;
+    return function(e){
+        if ( !timeout ){
+            fn.call(this,param,e)
+            timeout = setTimeout(()=>{
+                timeout = null
+            },1000)
+        }
+    }
+}
+```
+
 节流是触发事件后有CD，CD期内不能再次触发；防抖是触发事件后有读条时间，读条时间内触发事件，会重新读条。
 节流保证规定时间内，事件一定触发一次。
