--- a/Vue2/20.前端路由（二）.md
+++ b/Vue2/20.前端路由（二）.md
@@ -61,8 +61,8 @@ routes: [
 ```
 这样，首次进入页面时，路径'/'会重定向到'/home'，进入/home页。
 
-**动态路由**
-地址如果是动态的，就需要在路由的路径加上`:变量`：
+**路由动态匹配**
+在路由的路径加上`:变量`，可以动态匹配：
 ```
 {
   path: '/user/:userName', //路径可以使用多次变量
