--- a/Vue2/21.前端路由（三）.md
+++ b/Vue2/21.前端路由（三）.md
@@ -171,3 +171,19 @@ this.$router.push(options, onComplete?, onAbort?)
 this.$router.push({ name: 'home', path: 'home' }) // 和二级路由一样，路径不要写/
 ```
 此时，路由会跳转到routes内设置的/home路径。还可以传入params或query传递参数，但是使用params时，不能使用path，必须使用name。
+
+### 动态路由
+静态路由是直接写死的路由信息，动态路由则根据从服务器获取的数据，动态的添加路由信息。
+```
+// 添加根路由
+router.addRoute({routeOptions})
+// 为routeName添加子路由
+router.addRoute(routeName,{routeOptions})
+```
+一般在导航守卫中动态的添加路由，这种情况下，往往addRoutes()没有执行结束就会访问被添加的路由，因而找不到刚刚被添加的路由导致白屏，因此需要使用`next({ ...to, replace: true })`来递归。
+
+**路由信息**
+```
+router.hasRoute(name)：返回路由是否存在
+router.getRoutes()：返回一个包含所有路由（包括子路由）的数组
+```
