--- a/Vue3/3.Composition（一）.md
+++ b/Vue3/3.Composition（一）.md
@@ -3,7 +3,13 @@
 ###  setup
 setup() 函数是专门用于组合式api的钩子函数，不使用单文件组件的话，一切的操作都需要在setup函数内执行。
 setup在组件create之前执行。只能接受到接收props数据和组件上下文对象（可选）。
-**注意：在setup()函数中无法访问this。**
+
+**注意：在setup()函数中无法访问this获取组件实例。**
+如果确实需要获取组件实例，可以使用：
+```
+let {proxy} = getCurrentInstance();
+```
+这个API也只能在setup内使用。
 
 事实上，组合式api最好使用单文件组件，通过声明引入。vue建立了`<script setup>`来简化。
 组合式api基本都需要从vue解构引入。
@@ -43,13 +49,14 @@ const state = reactive({
 state.count  //1
 ```
 
-注意：解构赋值和替换整个对象，都会破坏reactive的响应式。需要使用 `toRefs(reactive({//...}))` 后，解构复制的值才具有响应式。
+注意：解构赋值和替换整个对象，都会破坏reactive的响应式。
+如果要用解构赋值，需要使用 `toRefs(reactive({//...}))` ，这样解构出的值才具有响应式。
 ```
 let {count} = toRefs( state )
 ```
 
 **toRef()/toRefs()**
-toRef()用于将响应式对象上的一个属性，创建一个对应的 ref，这个 ref 与其源属性保持同步。
+toRef()可以对响应式对象上的一个属性，创建一个对应的 ref，这个 ref 与其源属性保持同步。
 ```
 let state = reactive({
   foo: 1
