--- a/Vue3/4.Composition（二）.md
+++ b/Vue3/4.Composition（二）.md
@@ -51,7 +51,7 @@ let watchEffect = watchEffect((clear) => {
 这样在监视器执行时，如果上次的异步任务还没完成，就会被取消后重新建立本次的异步。
 
 #### watch()
-watch接收三个参数：第一个参数是要监听的对象，第二个参数s是监听的回调，第三个参数是控制监听时行为的对象（immediate、deep、once）：
+watch接收三个参数：第一个参数是要监听的对象，第二个是监听的回调，第三个参数是控制监听时行为的对象（immediate、deep、once）：
 ```
 let state = reactive({ count: 0 })
 let watch = watch(state,(newValue, oldValue, clear) => {
