--- a/开发环境/4.Git/5.分支管理.md
+++ b/开发环境/4.Git/5.分支管理.md
@@ -2,6 +2,9 @@
 ===================
 使用分支意味着可以从开发主线上分离开来，然后在不影响主线的同时继续工作。
 
+    git branch //查看本地所有分支 
+    git branch -r //查看远程所有分支
+
 ###  新分支
 创建分支命令：
 
@@ -33,11 +36,28 @@
 在本地打开文件，就可以看到Git用<<<<<<<，=======，>>>>>>>标记出不同分支的内容冲突产生的位置，此时，需要手动对文件更改，修改完成后再次进行提交。
 
 ###  合并策略
-Git会用Fast forward模式，但这种模式下，删除分支后，会丢掉分支信息。如果禁用Fast forward模式，Git就会在merge时生成一个新的commit，这样，从分支历史上就可以看出分支信息。
+#### merge
+merge是合并一个分支到当前分支。
+![](../相关文件/wOR7JK.png)
+Git会用Fast forward模式，但这种模式下，删除分支后，会丢掉分支信息。
+![](../相关文件/QpdH5g.png)
+如果禁用Fast forward模式，Git就会在merge时生成一个新的commit，这样，从分支历史上就可以看出分支信息。
 
     $ git merge --no-ff -m "merge with no-ff" (branchname)
-`--no-ff`参数，表示禁用Fast forward，而且本次合并要创建一个新的commit，所以加上-m参数，把commit描述写进去。
-这样合并后，可以用git log看到分支历史。
+`--no-ff`参数，表示禁用Fast forward，而且本次合并要创建一个新的commit，所以加上-m参数，把commit描述写进去。这样合并后，可以用git log看到分支历史。
+![](../相关文件/BIqlQW.png)
+
+#### rebase
+rebase是将当前分支改为以另一个分支为起点。
+![](../相关文件/RQ39Rv.png)
+git checkout feature
+git rebase master
+以master为起点，合并feature分支。可以简写为git reabse master feature
+![](../相关文件/HepjTM.png)
+此时，基分支（master 分支）的 HEAD 指针依然在之前的 commit （576cb7b）处，还需要将 feature 分支合入到 master 分支上
+git checkout master
+git merge feature
+这样的提交记录，就像是一直在master分支开发一样。
 
 在实际开发中，应该按照几个基本原则进行分支管理：
 首先，master分支应该是非常稳定的，也就是仅用来发布新版本，平时不能在上面干活，干活都在其他分支上。
