--- a/开发环境/4.Git/4.远程仓库.md
+++ b/开发环境/4.Git/4.远程仓库.md
@@ -22,6 +22,21 @@ GitHub网站就是提供Git仓库托管服务的，所以，只要注册一个Gi
     $ git push -u origin master
 Git不但会把本地的master分支内容推送到远程新的master分支，还会把本地的master分支和远程的master分支关联起来，在以后的推送或者拉取时就可以简化命令。
 
+### 拉取
+#### git fetch
+git fetch 是将远程主机的最新内容拉到本地，用户可以以后决定是否合并。
+
+取回origin 主机的master 分支：
+
+    $ git fetch origin master
+取回更新后，会返回一个FETCH_HEAD ，指的是某个branch在服务器上的最新状态，如果更新merge到当前分支
+
+    git merge origin/master
+
+#### git pull
+git pull 则是将远程主机的最新内容拉下来后直接合并。可以说git pull是git fetch和git merge两个命令的组合
+
+
 ###  从远程库克隆
 新建一个github仓库gitskills，建立时勾选Initialize this repository with a README，这样GitHub会自动为我们创建一个README.md文件。
 现在，远程库已经准备好了，下一步是用命令git clone克隆一个本地库：
