--- a/Vue3/4.Composition（二）.md
+++ b/Vue3/4.Composition（二）.md
@@ -1,6 +1,6 @@
 组合式 API
 ---
-### 计算属性
+### 计算属性computed
 计算属性可以接受一个 getter 函数，返回一个**只读的**响应式 ref 对象。
 ```
 let value = computed(()=>{})
@@ -20,12 +20,12 @@ let value = computed({
 let num1 = ref(1);
 let num2 = ref(2);
 
-let watchEffect = watchEffect(() => {
+let watchEffectStop = watchEffect(() => {
     console.log(num1.value+num1.value)
 })
 
 // 需要时可以停止监听
-// watchEffect() 
+// watchEffectStop() 
 ```
 watchEffect就能自动的监听num1和num2的变化，但是没有获取到旧的值。返回值是一个可以用来停止的函数。
 
@@ -51,23 +51,25 @@ let watchEffect = watchEffect((clear) => {
 这样在监视器执行时，如果上次的异步任务还没完成，就会被取消后重新建立本次的异步。
 
 #### watch()
-watch接收三个参数：第一个参数是要监听的对象，第二个是监听的回调，第三个参数是控制监听时行为的对象（immediate、deep、once）：
+watch接收三个参数：第一个参数是要监听的对象（响应式对象、getter函数），第二个是监听的回调，第三个参数是控制监听时行为的对象（immediate、deep、once）：
 ```
 let state = reactive({ count: 0 })
-let watch = watch(state,(newValue, oldValue, clear) => {
+let watchStop = watch(state,(newValue, oldValue, clear) => {
     // newValue === oldValue 
   },
 )
 
 // 需要时可以停止监听
-watch()
+watchStop()
 ```
 监听响应式对象时，默认深层级监听，如果回调函数是由于深层级的变更而被触发，那么新值和旧值将是同一个对象。
 
-如果只想监听对象的某个属性，则第一个参数需要是一个取值函数：
+如果是一个取值函数，则默认返回不同的对象时，才会触发回调：
 ```
-()=>{return state.count}
+()=>{return state.count} //state的count属性整体改变才会触发回调
 ```
+如果加上 deep 选项，则会强制转成深层侦听器。
+
 如果要同时监听多个对象，则需要以数组传入被监听对象：
 ```
 watch([num1,num2],([num1NewValue,num2NewValue], [num1oldValue,num2oldValue], clear) => {
@@ -75,9 +77,16 @@ watch([num1,num2],([num1NewValue,num2NewValue], [num1oldValue,num2oldValue], cle
   },
 )
 ```
+watch 默认当数据源变化时，才会执行回调，如果传入 immediate: true 选项，则会强制侦听器初始立即执行一次回调。
+
+状态改变时，触发侦听器回调函数和触发组件更新类似，都会在一个tick内批次处理。默认情况下，侦听器回调会在父组件更新 (如有) 之后、所属组件的 DOM 更新之前被调用。因此，在侦听器回调中访问的 DOM 处于更新前的状态，可以添加 flush: 'post' 选项将侦听器回调函数延迟到组件渲染之后再执行。
 
 **异步内容的消除**
 watch的消除发生在第二个参数回调函数内。
+
+### 响应式
+vue3的被监控的函数包括rander(templete),watcheffect,watch,computed。
+当这些函数使用了响应式对象时，响应式对象的变化会导致函数重新运行。
 
 ### ref
 将组件或元素的ref属性绑定到一个ref对象上，就能从该ref对象获取到dom。
