--- a/Ajax/14.token.md
+++ b/Ajax/14.token.md
@@ -36,8 +36,9 @@ HMACSHA256( base64UrlEncode(header) + "." +base64UrlEncode(payload), secret )
 #### 使用
 算出签名以后，把 Header、Payload、Signature 三个部分之间用"点"（.）分隔，拼成一个字符串，就可以返回给客户端。
 客户端收到服务器返回的 JWT，可以储存在 Cookie 里面，也可以储存在 localStorage。此后，客户端每次与服务器通信，都要将这个 JWT 放在 HTTP 请求的头信息Authorization内发送。
-
-
+```
+config.headers['Authorization'] = 'Bearer ' + token;
+```
 ### 双token
 登录后获取两个token：
 1.accessToken: 用来获取数据
