--- a/CSS/9.盒模型.md
+++ b/CSS/9.盒模型.md
@@ -60,8 +60,8 @@ overscroll-behavior
 ----------
 
 
-*CSS3*
-##弹性盒子模型
+**CSS3**
+## 弹性盒子模型
 通过弹性盒子模型，可以创建自适应浏览器窗口的流动布局以及自适应字体大小的弹性布局，使得响应式布局实现更加容易。
 任何一个容器都可以通过`display: flex;`指定为 Flex 布局。注意，设为 Flex 布局以后，子元素的float、clear和vertical-align属性将失效。
 
@@ -94,6 +94,7 @@ overscroll-behavior
 5.space-around：每个项目两侧的间隔相等。所以，项目之间的间隔比项目与边框的间隔大一倍。
 ![](./相关文件/9.2.png)
 
+
 **align-items属性**
 定义项目在如何纵向对齐。
 
@@ -105,6 +106,17 @@ stretch（默认值）：如果项目未设置高度或设为auto，将占满整
 
 ![](./相关文件/9.3.png)
 
+**align-content属性**
+定义了多根轴线的对齐方式。如果项目只有一根轴线，该属性不起作用。
+
+flex-start：顶部对齐。
+flex-end：底部对齐。
+center： 居中
+space-between：两端对齐，轴线之间的间隔都相等。
+space-around：每个轴线的间隔相等。
+stretch（默认值）：轴线占满整个交叉轴。
+
+![](./相关文件/9.6.png)
 
 ----------
 
