--- a/基础知识/1.XSS.md
+++ b/基础知识/1.XSS.md
@@ -4,23 +4,38 @@ XSS攻击点一般在于用户输入（url、input）的地方。
 原因就在于没有将用户输入的文本进行合适的过滤。
 
 **存储型 XSS**
-攻击者将恶意代码提交到目标网站的数据库中。用户打开目标网站时，数据库返回的恶意代码拼接在 HTML 中执行。
-这种攻击常见于input输入用户信息低地方。
+恶意代码未处理就提交到网站的数据库中，数据库返回的恶意代码拼接在 HTML 内，发生了执行。这种攻击常见于input输入信息的地方。
+因此：**输出的html数据，需要进行字符转义**。
+```
+div.innerHTML = '&lt;script src="demo.js"&gt;&lt;/script&gt;'
+```
+转义规则如下：
 
-**反射型 XSS**
-网站使用了URL的内容。攻击者构造出特殊的 URL，其中包含恶意代码。用户打开带有恶意代码的 URL 时，恶意代码执行。
-这种攻击常见于需要 URL 传递参数的页面。
+| 原字符 | 转义字符 |
+| ----- | ----- | 
+|&|\&amp; |
+|<|\&lt;|
+|>|\&gt;|
+|"|\&quot;|
+|'|\&#x27;|
+|/|\&#x2F;|
 
-###  漏洞总结
-1.在 HTML 中内嵌的文本中，恶意内容以 script 标签形成注入。
-2.在内联的 JavaScript 中，拼接的数据突破了原本的限制（字符串，变量，方法名等）。
-3.在元素标签的属性中，恶意内容包含引号，从而突破属性值的限制，注入其他属性或者标签。
-4.在标签的 href、src 等属性中，包含 javascript: 等可执行代码。
-5.在 onload、onerror、onclick 等事件中，注入不受控制代码。
-6.在 style 属性和标签中，包含类似 background-image:url("javascript:..."); 的代码（新版本浏览器已经可以防范）。
-7.在 style 属性和标签中，包含类似 expression(...) 的 CSS 表达式代码（新版本浏览器已经可以防范）。
+**反射型 XSS和DOM型 XSS**
+代码使用了URL的内容。攻击者构造出特殊的 URL，其中包含恶意代码。反射型是后端从url内取值，DOM型是前端从url内取值。
+```
+let a = document.querySelector('a');
+let str = 'javascript:alert("恶意代码")' //从url获取到的字符串内容
+a.href = str
+```
+在处理链接跳转，如 a.href=str 或 location.href=str 时，可以设定白名单（[http,https]），检查str是否以白名单开头。
 
 ###  预防
+可以得知，XSS 攻击有两大要素：
+
+1.攻击者提交恶意代码。
+2.浏览器执行恶意代码。
+
+因此：
 1.对于明确的输入类型，例如数字、URL、电话号码、邮件地址等等内容，进行输入过滤。
-2.使用innerHTML，需要进行转义。包括用 Vue/React 技术栈，使用 v-html/dangerouslySetInnerHTML 功能。
-3.a标签的 href 属性，JavaScript 的 eval()、setTimeout()、setInterval() 等，都能把字符串作为代码运行，需要进行转义。
+2.使用innerHTML需要进行转义。包括用 Vue/React 技术栈，使用 v-html/dangerouslySetInnerHTML 功能。
+3.a标签的 href 属性，eval()、setTimeout()、setInterval()和DOM的内联事件等，都能把字符串作为代码运行，所以不要拼接不可信数据。
