--- a/CSS/15.浮动布局.md
+++ b/CSS/15.浮动布局.md
@@ -8,20 +8,32 @@
 2.块元素会另起一行，行内元素不会另起一行，只在水平方向按从左到右地依次排列。
 比如div、p元素都会从新起一行，向下排，而span、img元素则会接着向右排，不新起一行。
 
-###  浮动布局
+###  浮动元素
 float属性属性值为right和left。
-添加浮动属性后，元素变成block元素，并脱离文档流，**上浮到新图层**，不再占据原来的位置，占据Z方向一个平面图层。未设置浮动的标签则会按照正常文档流来进行排列，并占据浮动元素原来的位置。除非我们给这个元素添加清除浮动，则该元素将不再占据浮动元素的位置。
-如果没有添加宽高，则会根据元素中的内容自适应宽高。两个相同方向的相邻浮动之间，也会根据margin（外边距）产生距离。
-浮动元素需要添加css`box-sizing: border-box`来去除盒边距与边框的px带来的宽度变化。
+元素添加浮动属性后，会变成block元素，并脱离文档流，然后向左或者向右平移，一直平移直到碰到了所处的容器的边框，或者碰到另外一个浮动的元素。
+
+如果父元素不设置高度，则不会根据浮动元素的高度自适应，会高度塌陷为0。
+
 
 ###  清除浮动
 1.对父级设置适合CSS高度
 前提是对内容高度要能确定并能计算好，只适合高度固定的布局。实际布局不适用。
 2.clear:both清除浮动
-结尾处加空div标签，设置css`clear:both`。
-3.父级div定义 overflow:hidden
-父级div定义css`overflow:hidden`。
+父级div使用伪元素::after，设置css`clear:both`:
+```
+div::after{
+	content: '';
+	display: block;
+	clear: both;
+}
+```
+3.父级div定义css`overflow: auto`触发BFC。
 
-###  避免高度塌陷
-父元素不设置高度，则会根据子元素的高度进行自适应。如果此时子元素产生了浮动，则父元素的高度将会为0，也就是高度塌陷。
-为了避免塌陷，需要为父元素设置css`overflow:hidden`或者`overflow:auto`。
+### BFC
+块级元素常见会创建BFC的方式包括：html，浮动元素，绝对定位，行内块元素，表格，overflow不为visible，弹性元素，网格元素。
+同一个BFC内的元素，布局会按照文档流来布局，即从上到下排列，margin会折叠。因此，BFC常用于解决：
+1.margin折叠问题——将两个元素放在不同BFC内
+2.浮动高度塌陷——将父元素变为BFC布局。
+BFC的高度如果为auto时，计算方式为：
+1.忽略绝对定位元素高度
+2.计算行和块元素高度
