--- a/Vue3/7.pinia.md
+++ b/Vue3/7.pinia.md
@@ -25,7 +25,7 @@ export const useStudentsStore = defineStore('students', options)
 ```
 这样，就创建了一个学生的状态库。
 
-defineStore()第一个参数是库的id，第二个参数可以是options，也可以是setup函数。
+defineStore()第一个参数是库的id，第二个参数可以是options，也可以是setup函数。useStudentsStore是一个函数。
 
 #### options
 options内包括state，getters和actions。类似vue2的data，computed，methods。
@@ -45,6 +45,7 @@ options内包括state，getters和actions。类似vue2的data，computed，metho
     },
 }
 
+
 ```
 #### setup
 需要传入一个函数，并且返回要暴露的对象：
@@ -60,7 +61,7 @@ defineStore('students', ()=>{
 ```
 
 ### 使用状态库
-useStudentsStore是一个函数，调用后，就会实例化这个状态库。
+调用useStudentsStore后，就会实例化这个状态库。
 ```
 let studentsStore = useStudentsStore();
 ```
@@ -73,6 +74,20 @@ const { increment } = studentsStore
 console.log(number.value,doubleNumber.value)
 increment()
 
+```
+
+### 订阅
+类似于 Vuex 的 subscribe 方法，通过 store 的 $subscribe() 方法可以侦听 state 及其变化。
+```
+cartStore.$subscribe((mutation, state) => {
+  console.log(mutation.type)
+  console.log(mutation.storeId)
+  console.log(mutation.payload)
+  console.log(state) // 变化后的值
+
+  // 每当状态发生变化时，将整个 state 持久化到本地存储。
+  localStorage.setItem('cart', JSON.stringify(state))
+})
 ```
 
 ### 插件
