--- a/小程序/13.事件.md
+++ b/小程序/13.事件.md
@@ -41,7 +41,7 @@ touchforcechange	在支持 3D Touch 的 iPhone 设备，重按时会触发
       </view>
     </view>
 点击 inner view 会先后调用handleTap2、handleTap4、handleTap3、handleTap1。
-###  事件对象
+###  事件对象event
 **基础事件**
 
 type	
@@ -51,10 +51,10 @@ timeStamp
 事件生成时的时间戳（毫秒）	
 
 target
-事件触发时的接收到的组件的一些属性值集合	
+触发事件的组件源头
 
 currentTarget
-事件触发时绑定的组件的一些属性值集合
+绑定了事件监听的对象，由于事件冒泡而触发了事件的组件
 
  target 和 currentTarget 可以参考上例中，点击 inner view 时，handleTap3 收到的事件对象 target 和 currentTarget 都是 inner，而 handleTap2 收到的事件对象 target 就是 inner，currentTarget 就是 outer。	
 这两个对象都可以通过 dataset 属性获取当前组件上由data-开头的自定义属性组成的集合。
@@ -76,3 +76,14 @@ touches
 changedTouches
 当前变化的触摸点信息的数组
 
+
+### 传参
+传递参数不能使用小括号，只能添加属`data-*="data"`
+时间对象在dataset属性内接收。
+```
+<view data-number="1" bindtap="bindViewTap"> DataSet Test </view>
+
+bindViewTap(e){
+  cosole.log(e.dataset.number)  //1
+}
+```
