--- a/小程序/5.渲染.md
+++ b/小程序/5.渲染.md
@@ -22,15 +22,17 @@
     })
 使用 wx:for-item 可以指定数组当前元素的变量名，使用 wx:for-index 可以指定数组当前下标的变量名，这样就控制多数组循环。
 
-    <view wx:for="{{[1, 2, 3, 4, 5, 6, 7, 8, 9]}}" wx:for-item="i">
-      <view wx:for="{{[1, 2, 3, 4, 5, 6, 7, 8, 9]}}" wx:for-item="j">
+    <view wx:for="{{[1, 2, 3, 4, 5]}}" wx:for-item="i">
+      <view wx:for="{{[4, 5, 6, 7, 8]}}" wx:for-item="j">
         <view wx:if="{{i <= j}}">
           {{i}} * {{j}} = {{i * j}}
         </view>
       </view>
     </view>
-如果列表中项目的位置会动态改变或者有新的项目添加到列表中，为了列表中的项目能保持自己的特征和状态，需要使用 wx:key 来指定列表中项目的唯一的标识符。
+如果列表中项目的位置会动态改变或者有新的项目添加到列表中，为了列表中的项目能保持自己的特征和状态，需要使用 wx:key (不用插值语法)来指定列表中项目的唯一的标识符。
+
 wx:key 的值支持:
+
 1.**字符串**
 
     <switch wx:for="{{objectArray}}" wx:key="unique" style="display: block;"> {{item.id}} </switch>
