--- a/小程序/7.样式文件.md
+++ b/小程序/7.样式文件.md
@@ -3,11 +3,7 @@
 
 **单位rpx**
 
-rpx可以根据屏幕宽度进行自适应。
-
-`rpx=(物理像素/屏幕宽度)*px`
-
-在 iPhone6 上，屏幕宽度为375px，共有750个物理像素，则以 iPhone6 作为视觉稿的标准，`rpx=2px`。
+rpx可以根据屏幕宽度进行自适应。小程序将所有设备宽度统一为750rpx。
 
 **样式导入**
 
