--- a/开发环境/3.webpack/1.理解webpack.md
+++ b/开发环境/3.webpack/1.理解webpack.md
@@ -1,8 +1,9 @@
 理解webpack
 ===================
-前端的模块化是目前能暴露变量，实现文件之间数据共享的最好方法，但是模块化只能在node这种后端跑，浏览器不能直接识别。webpack 能处理处理模块间的依赖关系，然后将所有这些模块打包成一个或多个 bundle，供浏览器直接使用。
-
+webpack 能处理模块间的依赖关系，将所有这些模块打包成一个或多个 bundle，供浏览器直接使用。
 在webpack内，所有静态资源文件（除了html）都是模块，都可以根据依赖关系进行打包生成静态资源。
+
+module 就是没有被编译的源代码，webpack 根据文件引用关系将模块合并成 chunk，再将处理好 chunk 文件后，生成运行在浏览器中的代码 bundle。
 
 ###  安装webpack
 
@@ -10,12 +11,8 @@
 
     $ npm install webpack -g 
 
-在项目中也包含一份独立的 Webpack
+在项目中也包含一份独立的 webpack
 
     $ npm install webpack -D
-
-###  建立配置文件
-在项目根目录建立配置文件webpack.config.js，并引入node内置模块path用来设置路径：
-
-    const path = require('path');
+在终端直接执行webpack命令，会使用全局的webpack。因此，项目要使用自身的webpack，需要使用配置文件。
 
