--- a/开发环境/3.webpack/2.核心概念.md
+++ b/开发环境/3.webpack/2.核心概念.md
@@ -1,39 +1,69 @@
 核心概念
 ===================
-###  入口(entry)
+webpack可以读取webpack.config.js文件，来执行打包。由于 webpack 遵循 CommonJS 模块规范，因此，在webpack.config.js中需要通过 require(...) 才能引入其他文件。
 
-入口起点(entry point)指示 webpack 应该使用哪个模块，来作为构建其内部依赖的开始。也就是需要将实际使用的文件作为入口，webpack会根据这个文件来查找需要的依赖。
+###  入口(entry)
+入口起点(entry point)指示 webpack 应该使用哪个模块，来作为构建其内部依赖的开始，webpack会根据这个文件来查找需要的依赖。
 
     module.exports = {
-      entry: './path/file.js'
+      entry: './src/file.js' //入口
     };
 
-###  出口(output)
+###  输出(output)
 output 属性告诉 webpack 在哪里输出它所创建的 bundles，以及如何命名这些文件。
 
+    const path = require('path');  // node模块
+
     module.exports = {
-      entry: './path/file.js',
-      output: {
-        path: path.resolve(__dirname, 'dist/'),
-        filename: 'bundle.js'
+      entry: './src/file.js',
+      output: {                                 // 输出
+        path: path.resolve(__dirname, 'dist'), // 文件输出路径
+        filename: 'bundle.js',                  // 文件名
+        publicPath: 'dist/'                     // url资源引用路径
       }
     };
 
 ###  loader
-webpack 自身只理解js和json（webpack1.0版本不支持），loader 让 webpack 能够去处理其他文件。loader 可以将所有类型的文件转换为 webpack 能够处理的有效模块，然后就可以利用 webpack 的打包能力，对它们进行处理。
-使用具体loader前，需要先用npm进行下载。
+webpack 自身只理解js和json（webpack1.0版本不支持），loader 可以将其他类型的文件转换为 webpack 能够处理的模块。
+不同类型的文件使用不同的loader，需要先用npm进行下载loader。配置信息写在 module.rules。
+
 
     module: {
       rules: [
-        { test: /\.txt$/, use: 'raw-loader' }
+        { test: /\.txt$/, use: 'raw-loader' },
+        { test: /\.css$/, use: ['style-loader', 'css-loader'] }, //cssloader负责加载css文件，styleloader负责样式添加到dom
+        { test: /\.ts$/, use: 'ts-loader' },
       ]
     }
-test 属性用于标识出应该被对应的 loader 进行转换的某个或某些文件。
-use 属性表示进行转换时，应该使用哪个 loader。
-###  插件(plugins)
-插件目的在于解决 loader 无法实现的其他事。想要使用一个插件，你只需要 require() 它，然后把它添加到 plugins 数组中。
 
-    plugins: []
+loader 有两个属性：
+1.test：识别出哪些文件会被转换。
+2.use：定义出在进行转换时，应该使用哪个 loader。
+一种文件类型使用多个loader时，webpack的顺序是从后往前使用，例如css是先调用cssloader，再调用styleloader。
+
+loader是函数，当webpack解析资源时，会调用相应的loader去处理。函数接收三个参数：
+1.content：文件内容
+2.map：sourcemap
+3.meta：别的loader传递的数据
+
+###  插件(plugins)
+插件用于执行具体的任务。包括：打包优化，资源管理，注入环境变量。
+想要使用一个插件，需要 require() 它，插件是class（构造函数），需要new实例化后，添加到 plugins 数组中。
+
+    plugins: [
+      new plugins1(),
+      new plugins2(参数),
+    ]
+
+webpack在编译过程中，会创建compiler对象，顺序触发一系列钩子事件。插件可以注册在compiler的钩子内，在钩子执行时被调用。
+
+**compiler**
+webpack读取配置文件，生成compiler对象并遍历所有插件。compiler是webpack执行的全局上下文，compiler对象创建后会调用插件的apply方法，apply接收compiler对象作为参数。
+
+**compilation**
+是一次资源编译的上下文
+
+![](../相关文件/Snipaste_2024-06-19_17-29-27.png)
 
 ###  模式
 通过选择 development 或 production 之中的一个，来设置 mode 参数，可以启用相应模式下的 webpack 内置的优化。
