--- a/CSS/9.盒模型.md
+++ b/CSS/9.盒模型.md
@@ -215,12 +215,32 @@ stretch（默认值）：轴线占满整个交叉轴。
 ###  宽高比
 1.`aspect-ratio`
 aspect-ratio的语法格式如下：`aspect-ratio: width/height`
-将width或height设为auto，然后指定aspect-ratio。另一个值就会按照比例自动变化。
+将width或height设为auto，然后指定aspect-ratio。另一个值就会按照比例自动变化。（兼容性2021Chrome）
 
 1.`padding-top/padding-bottom`
 ```
-width: 100%;
-height: 0;
-padding-top: 50%;
+<div class="out">
+    <div class="inner">
+        <div class="content">
+            <!-- 实际内容 -->
+        </div>
+    </div>
+</div>
+
+.out{
+    width: 50%;
+}
+.inner{
+    width: 100%;
+    padding-top: 75%;
+    position: relative;
+}
+.content{
+    position: absolute;
+    inset: 0;
+    border: 1px solid black;
+    box-sizing: border-box;
+}
 ```
+div.content就成为宽高比4/3的盒子。
 这种方式兼容性好，但是元素内的子元素需要absolute定位。
