--- a/JS/15.DOM对象.md
+++ b/JS/15.DOM对象.md
@@ -149,7 +149,7 @@ let content = getComputedStyle(myDiv, '::after').content
 
     node.className	设置或返回元素的class属性
 
-**偏移量**(无单位)
+**尺寸**(无单位)
 
 1.element.clientHeight	
 在页面上返回内容的可视高度（不包括边框，边距或滚动条）
@@ -161,10 +161,13 @@ let content = getComputedStyle(myDiv, '::after').content
 元素在垂直方向上占用的空间大小，以像素计。包括元素的高度、（可见的）水平滚动条的高度、上边框高度和下边框高度。不包括margin的元素的高度
 2.offsetWidth
 元素在水平方向上占用的空间大小，以像素计。包括元素的宽度、（可见的）垂直滚动条的宽度、左边框宽度和右边框宽度。不包括margin的元素的高度
-3. offsetLeft
+3.offsetLeft
 元素的左外边框至包含元素的左内边框之间的像素距离。
-4. offsetTop
+4.offsetTop
 元素的上外边框至包含元素的上内边框之间的像素距离。
+
+**getBoundingClientRect()**
+元素实际占用尺寸。元素如果做了transfrom变化，getBoundingClientRect()获取的是变化后实际占据的空间尺寸。
 
 **滚动大小**
 指的是包含滚动内容的元素的大小。
