--- a/JS/18.JS事件.md
+++ b/JS/18.JS事件.md
@@ -192,11 +192,22 @@ mousemove(鼠标移动)
       btn.removeEventListener('click', btnClick, false);
     }
 
+鼠标按下事件抬起取消：
+
+    btn.onmousedoen = function(e){
+        // 按下时的处理
+        window.onmouseup = function(){
+            //抬起时的处理
+            window.onmouseup = null
+        }
+    }
 ###  键盘事件
 
 keydown(键按下)
 keypress(按键)
 keyup(键起来)
+
+键盘长按下后，事件是会一直触发的，如果希望键盘按下抬起内只触发一次，可以建立一个set对象，事件触发时判断set内是否已经有了前面的记录，若没有就记录下来并执行任务，抬起时删除这个记录。
 
 ###  表单事件
 focus和blur
