--- a/Vue3/7.pinia.md
+++ b/Vue3/7.pinia.md
@@ -25,7 +25,7 @@ export const useStudentsStore = defineStore('students', options)
 ```
 这样，就创建了一个学生的状态库。
 
-defineStore()第一个参数是库的id，第二个参数可以是options，也可以是setup函数。useStudentsStore是一个函数。
+defineStore()第一个参数是库的id，第二个参数可以是options，也可以是setup函数。返回值（useStudentsStore）是一个函数。
 
 #### options
 options内包括state，getters和actions。类似vue2的data，computed，methods。
