--- a/Ajax/1.Ajax基本用法.md
+++ b/Ajax/1.Ajax基本用法.md
@@ -74,15 +74,15 @@ responseXML获得从服务器进程返回的DOM兼容的文档数据对象。
 
 
 ###   事件
-**onreadystatechange**
+**readystatechange**
 
 当请求被发送到服务器时，我们需要执行一些基于响应的任务。
-readyState属性存有 XMLHttpRequest 的状态信息，每当 readyState 改变时，就会触发 onreadystatechange 事件。
+readyState属性存有 XMLHttpRequest 的状态信息，每当 readyState 改变时，就会触发 readystatechange 事件。
 
 **进度事件**
 `progress`，`load`，`error`，`abort`
 
-progress 事件同时存在于下载和上传的传输。
+progress 事件同时存在于下载（xhr对象上）和上传（xhr.upload对象上）的传输，事件对象e的属性保存着数据的的总量（e.loaded）和当前量（e.total）。
 一个完整的ajax请求都会从loadstart事件开始，然后不间断地触发progress事件，然后触发load、abort、timeout或者error事件中的一个，最后触发loadend事件。
 注意：只要浏览器接收到了服务器的响应，不管其状态如何都会触发load事件。
 
