--- a/Ajax/13.Fetch.md
+++ b/Ajax/13.Fetch.md
@@ -6,6 +6,10 @@ fetch()默认发出 GET 请求，返回一个 Promise 对象。
 ```
 fetch(url).then(...)
 ```
+**和XHR的对比**
+
+![](./相关文件/13.3.png)
+
 ###  Response 对象
 fetch()请求以后，会传递response对象，它对应服务器的 HTTP 回应。
 ![](./相关文件/13.1.png)
