--- a/Ajax/9.文件上传.md
+++ b/Ajax/9.文件上传.md
@@ -13,12 +13,13 @@
 但是由于form表单提交操作网页会造成整体刷新，所以实际都使用ajax来代替表单上传文件。需要自行格式化文件内容，此时就需要 FormData 对象：
 
     var file = document.getElementById('file').files[0];
-    var formDate = new FormData();	
-    formDate.append('file', file);
-这样，文件就格式化为 formData 格式文件
+    var formData = new FormData();	
+    formData.append('file', file);
+这样，文件就格式化为 formData 格式文件，可以进行上传
 
-    xhr.send(formDate);
+    xhr.send(formData);
 
+FormData 对象,就是修改了请求报文的Content-Type和生成报文体。
 ###  Blob
 文件上传的实质是上传文件的内容以及文件的格式，使用HTML提供的Input上传文件的时候，文件的内容会读进内存里，因此，可以使用Blob直接传输文件二进制数据。
 Blob 对象表示一个不可变、原始数据的类文件对象。上面的file变量的构造函数File就是继承与基于Blob，所以：
