--- a/ES6/10.Symbol 类型.md
+++ b/ES6/10.Symbol 类型.md
@@ -1,6 +1,6 @@
 Symbol 类型
 ===================
-对象的属性名是字符串，就存在重复产生覆盖的风险。为此，ES6 引入了一种新的原始数据类型Symbol，表示独一无二的值。Symbol 值通过Symbol函数生成。
+对象的属性名是字符串，就存在重复产生覆盖的风险。为此，ES6 引入了一种新的原始数据类型Symbol，表示独一无二的值来作为属性名。Symbol 值通过Symbol函数生成。
 
     let s = Symbol();
 此时，变量s就是一个独一无二的值。注意，**Symbol函数前不能使用new命令**。Symbol 是一种类似于字符串的数据类型。Symbol函数可以接受一个字符串作为参数，表示对 Symbol 实例的描述，为了在控制台显示，或者转为字符串时，比较容易区分。
@@ -13,6 +13,21 @@ Symbol 类型
     
     s1.toString() // "Symbol(foo)"
     s2.toString() // "Symbol(bar)"
+
+Symbol()函数的参数只是表示对当前 Symbol 值的描述，相同参数的Symbol函数的返回值是不相等的。
+
+    // 没有参数的情况
+    let s1 = Symbol();
+    let s2 = Symbol();
+
+    s1 === s2 // false
+
+    // 有参数的情况
+    let s1 = Symbol('foo');
+    let s2 = Symbol('foo');
+
+    s1 === s2 // false
+
 Symbol 值不能与其他类型的值进行运算。
 Symbol 值可以显式转为字符串和布尔值。
 
@@ -52,8 +67,9 @@ Symbol 作为属性名，常规的遍历无法获取。可以使用Object.getOwn
 
 **Symbol.for(key)**
 **Symbol.keyFor(sym)**
+
 Symbol.for()不会立即返回一个Symbol类型，而是在全局环境内检查是否有相同key的Symbol，没有才创建，并注册在全局环境，有了则返回该Symbol。
-注意，Symbol.for()建立的symbol和Symbol()不同。
+
 Symbol.keyFor()  方法返回由Symbol.for(key)创建的 Symbol 类型值的 key 值。
 
-Symbol.for()  为 Symbol 值登记的名字，是全局环境的，不管有没有在全局环境运行。
+Symbol.for()  为 Symbol 值登记的名字，是全局环境的，不管是函数内调用Symbol.for()，还是iframe窗口调用，都是全局环境的同一个值。
