--- a/ES6/18.Proxy.md
+++ b/ES6/18.Proxy.md
@@ -1,26 +1,24 @@
 Proxy
 ======
-Proxy用于创建代理对象。Proxy接受两个参数。第一个参数是所要代理的目标对象，第二个参数是一个配置对象。
+Proxy是一个类，用于创建代理对象。Proxy接受两个参数：
 ```
-let proxy = new Proxy(target, handler);
+let proxy = new Proxy(目标对象, {代理规则对象});
 ```
-要使得Proxy起作用，必须针对Proxy实例进行操作,操作可以反馈到目标对象。
-```
-let obj = {a:undefined,b:undefined};
-let proxy = new Proxy(obj,{
-    set(target,prop,value){
-        target[prop] = value+1
-    },
-    get(target,prop){
-        return 0
-    },
-});
-proxy.a = 1;
-proxy.b = 10;
-console.log(proxy); //Proxy(Object) {a: 2, b: 11}
-console.log(obj) //{a: 2, b: 11}
-console.log(proxy.a) //0
-console.log(obj.a) //2
-```
+对Proxy实例进行的操作，会根据定制的代理规则，也执行到目标对象上。
 
-访问proxy的方法和访问属性一样，都是调用get函数，只是get内返回值要是一个函数。
+### 拦截方法
+
+#### get()
+在读取属性时触发，接收三个参数，依次为目标对象、属性名和 proxy 实例本身（可选）
+```
+get(target, propKey, receiver){
+    return target[propKey]
+}
+```
+#### set()
+在写入属性时触发，接收四个参数，依次为目标对象、属性名、属性值和 proxy 实例本身（可选）
+```
+set(target, propKey, newValue, receiver){
+    target[propKey] = newValue
+}
+```
