--- a/ES6/3.解构赋值.md
+++ b/ES6/3.解构赋值.md
@@ -63,6 +63,10 @@
     
     obj // {prop:123}
     arr // [true]
+
+    let { name: newName } = { name: 'value' };
+    newName // 'value'
+
     
 对象的解构赋值，可以很方便地将现有对象的方法，赋值到某个变量。
 
