--- a/ES6/5.函数.md
+++ b/ES6/5.函数.md
@@ -25,7 +25,7 @@ ES6可以将参数默认值直接写在参数定义的后面：
 通常情况下，具有默认值的参数，最好在函数参数末尾。这样容易用到默认值。否则只能传入undefined来触发默认值。
 
 **作用域**
-一旦设置了参数的默认值，函数进行声明初始化时，参数会形成一个单独的作用域。这个作用域和函数内的作用域**同级**。
+一旦设置了参数的默认值，函数调用时，参数会形成一个单独的作用域。这个作用域和函数内的作用域**同级**。
 
     let x = 1;
     function f(y = x) {
@@ -89,7 +89,8 @@ foo()
     let getTempItem = id => ({ id: id, name: "Temp" });
     
 注意：
-**箭头函数没有自身的this对象**，箭头函数内部的this就是外层代码块的this，指向创建箭头函数的上下文对象，而不是函数自身。这个指向是固定不变的。
+**箭头函数没有自身独立的this对象**，箭头函数内使用this，用的是箭头函数创建时，所在作用域的this，不是箭头函数的this。
+使用call()，apply()可以改变普通函数本身的this指向，但是箭头函数没有this，所以箭头函数使用call(),apply()无效。
 **箭头函数没有arguments对象**，如果要用，用 rest 参数代替。
 ```
 (...rest)=>{
