--- a/JS/10.对象.md
+++ b/JS/10.对象.md
@@ -130,10 +130,10 @@ Object.getOwnPropertyDescriptor(obj, 'foo')
 ```
 Object.defineProperty(obj, 'foo', {
     set(newValue){
-
+        obj['foo'] = newValue
     },
     get(){
-
+        return obj['foo']
     }
 });
 ```
