--- a/JS/4.运算符.md
+++ b/JS/4.运算符.md
@@ -3,10 +3,10 @@
 JavaScript的运算符按运算符类型可以分为以下5种：
 
 （1）算术运算符；
-（2）比较运算符；
-（3）赋值运算符；
-（4）逻辑运算符；
-（5）条件运算符；
+（2）比较判断符；
+（3）赋值符；
+（4）逻辑判断符；
+（5）条件执行符；
 
 ###  算术运算符
 **加法运算符**
@@ -21,7 +21,7 @@ JavaScript的运算符按运算符类型可以分为以下5种：
 	</script>
 它的算法步骤如下。
 
-1. 如果运算子是对象，先自动转成原始类型的值（即先执行该对象的valueOf方法，如果结果还不是原始类型的值，再执行toString方法；如果对象是Date实例，则先执行toString方法）。
+1. 如果运算子是对象，先自动转成原始类型的值（即先执行该对象的[Symbol.toPrimitive]方法，使用返回值进行运算。如果该方法的返回值不是原始类型，则这个对象就不能执行+运算。如果没有该方法，则调用valueOf方法，如果结果还不是原始类型的值，再执行toString方法；如果对象是Date实例，则先执行toString方法）。
 2. 两个运算子都是原始类型的值以后，只要有一个运算子是字符串，则两个运算子都转为字符串，执行字符串连接运算。
 3. 否则，两个运算子都转为数值，执行加法运算。
 ```
@@ -49,7 +49,7 @@ true + false // 1
     i=1;
     j=++i;  //i=2,j=2
 
-###  比较运算符
+###  比较判断符
 首先对操作数进行比较，该操作数可以是数字也可以是字符串，然后返回一个布尔值true或false。
 字符串只比较首个数字的大小。
 比较特别的包括：
@@ -65,7 +65,7 @@ true + false // 1
 `===`先判断类型再比较值，类型不同直接不相等。
 两个引用类型（对象、数组、函数）数据比较时，不是比较它们的值是否相等，而是比较它们是否指向同一个内存地址。
 
-###  赋值运算符
+###  赋值符
 | 运算符   |  效果   |
 |:----: | :----: |
 |   =      |  a=b   |
@@ -74,18 +74,21 @@ true + false // 1
 |*=  |	a*=b等价于a=a*b  |
 |/=  |a/=b等价于a=a/b  |
 |%=  |a%=b等价于a=a%b   |   
+
 %表示取余。
 
-###  逻辑运算符
+###  逻辑判断符
 逻辑运算符简单来说就是与，或，非。通常用于执行布尔运算，与，或位于两个表达式之间，返回布尔值true或false。
 | 运算符   |  效果   |
 | :----:  | :----: |
 | && | 逻辑与，若两边表达式的值都为true，则返回true；任意一个值为false，则返回false |
 | &#124;&#124;  | 逻辑或，只有表达式的值都为false，才返回false，其他情况返回true  |
 | ！  | 逻辑非，若表达式的值为true，则返回false；若表达式的值为false，则返回true  |
-逻辑与如果确定左边为false，则会跳过右边，不再计算右边结果。
 
-###  条件运算符
+逻辑与如果确定左边为false，则会跳过右边，不再计算右边结果。
+表达式逻辑为false的，只有null,undefined,0,NaN,空字符串,false。
+
+###  条件执行符
 语法为（条件）? "表达式1" : "表达式2";
 如果“条件”为true，则表达式的值使用“表达式1”的值；如果“条件”为false，则表达式的值使用“表达式2”的值。
 
