--- a/ES6/13.promise.md
+++ b/ES6/13.promise.md
@@ -1,13 +1,59 @@
 promise
 ===================
 Promise对象，可以将异步操作以同步操作的流程表达出来，避免了层层嵌套的回调函数。
-###  用法
+
+```
+// 异步函数
+function sendData(str){
+  setTimeout(()=>{
+    if ( str == 'abc' ){
+      // 成功
+      // 没办法把成功的结果返回出去，比如使用 return 100，没有变量接收这个返回值100。定时器的返回值是定时器的id。
+    }else{
+
+    }
+  },1000)
+}
+sendData('abc') //执行后，拿不到成功的值 100
+```
+为了获取到结果的值，以前的js解决方法，是用回调函数：
+```
+// 回调函数
+function sendData(str,success,fail){
+  setTimeout(()=>{
+    if ( str == 'abc' ){
+      // 成功
+      success( 100 ) //使用函数将结果返回
+    }else{
+
+    }
+  },1000)
+}
+sendData('abc',(value)=>{
+  //处理返回的值
+},()=>{})
+```
+出现多层回调之后，代码的可读性很差，于是，出现了Promise解决方案。
+
+###  Promise用法
 ```
 const promise = new Promise(function(resolve, reject) {
   // code
 });
 ```
 Promise构造函数接受一个函数作为参数，这个参函数也有两个参数resolve和reject，它们也是函数。resolve函数将Promise对象的状态从“未完成pending”变为“成功fulfilled”，所以在异步操作成功时调用；reject函数将Promise对象的状态从“未完成pending”变为“失败rejected”，所以在异步操作失败时调用，这两个函数都可以传递参数。
+
+需要注意，resolve的参数如果是promise时，则状态由这个参数promise的状态决定，如果参数是有then方法的对象（这种对象被成为实现了thenable），则状态由then决定：
+```
+new Promise(( res, rej )=>{
+  res({
+    then( res, rej ){
+      // res() // promise的状态变为fulfilled
+      rej() // promise的状态变为rejected
+    }
+  })
+})
+```
 
 then方法是Promise对象方法，接收两个回调函数作为参数。分别对应Promise为fulfilled时，调用第一个参数执行，当Promise为rejected时，调用第二个参数执行：
 ```
@@ -73,7 +119,21 @@ let promise = doSomething().then(function(result) {
 })
 promise相当于Promise.resolve( doSomethingElse(result) )
 ```
-如果返回值为promise对象，则会等到这个promise有结果了，再执行后一个then。
+1. 如果then内回调函数没有返回值（返回 undefined），则新promise的状态为fulfilled，传递的值为undefined。
+2. 如果有返回值，且不是promise，则新promise的状态为fulfilled，传递的值为返回值。
+3. 如果返回值为promise对象，则会等到这个promise有结果了，再执行后一个then。
+4. 如果返回值是有then方法的对象，则根据then函数来执行
+```
+promise.then((resValue1)=>{
+  return {
+    then(res,rej){
+      res(resValue1)
+    }
+  }
+}).then((resValue2)=>{
+  resValue1 == resValue2
+})
+```
 所以，如果返回pedding状态的promise，会跳出链式调用。
 ```
 promise.then(()=>{
@@ -83,7 +143,7 @@ promise.then(()=>{
 })
 ```
 ###  catch方法
-Promise对象还有一个catch方法来收集错误：
+Promise对象还有一个catch方法来收集reject()传递的异常值：
 
 	promise.then(function(data){
 		console.log(data);
@@ -91,7 +151,7 @@ Promise对象还有一个catch方法来收集错误：
 		console.log(error)
 	})
 
-Promise 对象的错误具有“冒泡”性质，会一直向后传递，直到被捕获为止，catch方法则优先捕获最顶层（promise）的错误。所以，可以在最后添加catch方法。
+Promise 对象的异常具有“冒泡”性质，会一直向后传递，直到被捕获为止，catch方法则优先捕获最顶层（promise）的错误。所以，可以在最后添加catch方法。
 
 	loadImageAsync("imgSrc1").then((image)=>{
 		document.body.appendChild(image);
@@ -102,13 +162,45 @@ Promise 对象的错误具有“冒泡”性质，会一直向后传递，直到
 	}).catch((error)={
 		console.log(error)
 	})
-Promise 内部的错误会终止后续所有then的运行，并传递到catch内，但是不会影响到 Promise 外部的代码。
+在 Promise 链式调用中，第一个抛出的异常，直到被链条中第一个的 catch 捕获；这之间的 then 不会被执行。
+如果 then 不仅有成功回调（第一个参数），还写了失败回调（第二个参数），那么这个失败回调会先捕获前面的异常，处理后链条会恢复为 fulfilled 状态，继续执行后续 then 。
+```
+Promise.resolve('初始值')
+  .then(() => {
+    throw new Error('第一个 then 的异常'); // 第一个异常
+  })
+  // 第二个 then：带失败回调，捕获前面的异常
+  .then(
+    () => { /* 不会执行 */ },
+    (err) => {
+      console.log('第二个 then 的失败回调捕获：', err.message); // 输出：第一个 then 的异常
+      throw new Error('第二个 then 失败回调抛的新异常'); // 抛出新异常
+    }
+  )
+  // 第三个 then：不会执行
+  .then(() => {
+    throw new Error('第三个 then 的异常');
+  })
+  // 最终 catch
+  .catch((err) => {
+    console.log('最终 catch 捕获：', err.message); // 输出：第二个 then 失败回调抛的新异常
+  });
+```
 
 ###  finally方法
 一般放在实例链的最后，不管 Promise 对象最后状态如何，都会执行的操作，finally方法没有参数。
 
 ###  静态resolve()、reject()
 Promise.resolve()会返回一个Promise 对象，**状态由根据传入的参数决定**。
+
+```
+Promise.resolve(数据)
+// 相当于
+new Promise((res)=>{
+  res(数据)
+})
+```
+
 如果参数是一个 Promise 实例，那么返回这个实例。或者参数是具有 then 方法的对象，那么返回 Promise 对象，并调用then()。其他就返回一个resolved状态的 Promise 对象。
 
 **then方法和catch方法返回 Promise 对象的状态也是这样**。
@@ -135,28 +227,38 @@ let p = Promise.all([p1, p2, p3]);
 ```
 上例p的状态由p1、p2、p3决定，p1、p2、p3都成功，则p变为成功，then传递所有成功的传递值组成的数组，p1、p2、p3有一个失败，则p失败，catch捕获第一个失败的传递值。
 
+###  静态any方法
+如果所有参数实例都变成rejected状态，包装实例就会变成rejected状态，值保存在err.errors数组，否则状态为resolve，并返回第一个成功的promise传递的值。
+
 ###  静态race方法
 race()方法也是将多个 Promise 实例合成一个新的 Promise 实例。
 ```
 let p = Promise.race([p1, p2, p3]);
 ```
-上例p的状态由p1、p2、p3决定，但不同于all方法，p1、p2、p3谁先改变状态，p就相应改变状态，传递先改变的promise。
+上例p的状态由p1、p2、p3决定，但不同于all方法，p1、p2、p3谁先改变状态，p就相应改变状态，并传递它的值。
 ```
 const p = Promise.race([
-  fetch('/resource-that-may-take-a-while'),
+  fetch('/address'),
   new Promise(function (resolve, reject) {
     setTimeout(() => reject(new Error('request timeout')), 5000)
   })
 ]);
-
-p
-.then(console.log)
-.catch(console.error);
 ```
 上面代码中，如果 5 秒之内fetch方法无法返回结果，就触发rejected。
 
-###  静态any方法
-如果所有参数实例都变成rejected状态，包装实例就会变成rejected状态，值保存在err.errors数组，否则状态为resolve，并返回第一个状态resolve的promise。
-
 ###  静态allSettled方法
-和实例方法finally类似，allSettled不管每一个promise是成功还是失败，总会在所有的都状态改变后，返回状态为resolve的promise，then的参数是每一个的执行情况组成的数组。
+和实例方法finally类似，allSettled在所有的都状态改变后，返回状态为resolve的promise，then的参数是每一个的执行情况组成的数组。
+```
+let resolved = Promise.resolve('成功');
+let rejected = Promise.reject('失败');
+
+let allSettledPromise = Promise.allSettled([resolved, rejected]);
+
+allSettledPromise.then(function (results) {
+  console.log(results);
+});
+// [
+//    { status: 'fulfilled', value: '成功' },
+//    { status: 'rejected', reason: '失败' }
+// ]
+```
