--- a/ES6/19.Reflect.md
+++ b/ES6/19.Reflect.md
@@ -15,4 +15,21 @@ Reflect.ownKeys(target)
 
 Reflect.getOwnPropertyDescriptor(target, name)
 
+### Reflect和Proxy配合：
+```
+get(target, propKey, receiver){
+    Reflect.get(target, propKey, receiver)
+}
 
+set(target, propKey, newValue, receiver){
+    Reflect.set(target, propKey, newValue, receiver)
+}
+
+has(target, propKey){
+    Reflect.has(target, propKey)
+}
+
+deleteProperty(target, propKey){
+    Reflect.deleteProperty(target, propKey)
+}
+```
