--- a/ES6/3.解构赋值.md
+++ b/ES6/3.解构赋值.md
@@ -1,7 +1,6 @@
 解构赋值
 ===================
 就是直接从对象中提取出值，然后赋值到变量。
-左右两边必须**结构一致**，即数组对数组，对象对对象。
 
 
 ###  数组的解构赋值
@@ -41,7 +40,7 @@
     x // 1
     y // 3
 
-事实上，就是类数组（例如nodeList,string）也可以进行解构赋值。
+类数组（例如nodeList,string,函数arguments），set也可以进行解构赋值，事实上，只要等号右边是可迭代对象，就可以采用数组形式的解构赋值。
 
 ###  对象的解构赋值
 
