--- a/ES6/7.对象.md
+++ b/ES6/7.对象.md
@@ -31,6 +31,22 @@ const o = {
 };
 ```
 
+###  set/get关键字
+替代属性读写逻辑：
+```
+let obj = {
+  _age: 18,
+  set age(){
+    return this._age
+  }
+  get age(newValue){
+    this._age = newValue
+  }
+}
+
+obj.age //18
+```
+
 ###  对象属性
 
 **描述对象**
