--- a/JS/8.函数理解.md
+++ b/JS/8.函数理解.md
@@ -287,4 +287,40 @@ bar的作用域绑定foo内，bar所访问的变量x指向的是foo内部的x，
     f();  //3
 
 外部函数的a变量对内嵌函数来说是可取得的，而除了通过内嵌函数本身，没有其它任何方法可以取得内嵌的变量。
+闭包可以使函数内的变量，就算外层函数执行完毕，也不会被销毁，像全局变量一样，还保存在内存中。
+
+闭包是防抖（debounce）、节流（throttle）的核心实现逻辑 —— 保留定时器 ID、上次执行时间等状态：
+```
+// 防抖：频繁触发时，仅最后一次触发生效
+function debounce(fn, delay) {
+  let timer = null; // 闭包保留定时器ID
+  return (...args) => {
+    clearTimeout(timer); // 清除上一次定时器
+    timer = setTimeout(() => fn(...args), delay);
+  };
+}
+
+// 用法：输入框搜索防抖
+const input = document.querySelector('input');
+input.addEventListener('input', debounce(() => {
+  console.log('搜索：', input.value);
+}, 500));
+```
+
+闭包是早期js实现模块隔离的核心方式
+```
+const utils = (function() {
+  // 私有工具方法：外部不可见
+  const formatTime = (time) => new Date(time).toLocaleString();
+
+  // 暴露公有方法（闭包保留对私有方法的引用）
+  return {
+    formatDate: (time) => formatTime(time),
+  };
+})();
+
+console.log(utils.formatDate(Date.now())); // 正常调用
+console.log(utils.formatTime); // undefined（私有方法不可访问）
+```
+
 
