--- a/开发环境/3.webpack/2.核心概念.md
+++ b/开发环境/3.webpack/2.核心概念.md
@@ -1,45 +1,59 @@
 核心概念
 ===================
 webpack 需要建立一个 webpack.config.js 配置文件，文件遵循 CommonJS 模块规范，使用 require(...) 引入其他文件。文件内导出了一个 webpack 配置的对象。
+```
+const path = require('path');
+module.exports = {
+  mode: 'production',
+  entry: './src/index.js', // 入口文件
+  output: {
+    path: path.resolve(__dirname, 'dist'), // 输出目录
+    filename: 'bundle.js', // 输出文件名
+    clean: true // webpack5, 打包前清空 dist
+  }
+};
+```
 
 ###  入口(entry)
-入口起点(entry point)指示 webpack 应该使用哪个模块，来作为构建其内部依赖的开始，webpack会根据这个文件来查找需要的依赖。
+入口起点(entry point)指示 webpack 应该使用哪个js文件，来作为构建其内部依赖的开始，webpack会根据这个文件来查找需要的依赖。
+```
+entry: './src/index.js' //入口
+```
+这个文件是根文件，所有的文件最终都需要import到这个文件：
+```
+// index.js
+import {foo} from '.foo.js' //引入foo函数
+import 'abc.js'  //引入其他js文件
 
-    module.exports = {
-      entry: './src/index.js' //入口
-    };
-
+foo()
+```
 ###  输出(output)
 output 属性告诉 webpack 在哪里输出它所创建的 bundles，以及如何命名这些文件。
-
-    const path = require('path');  // node模块
-
-    module.exports = {
-      entry: './src/index.js',
-      output: {                                 // 输出
-        path: path.resolve(__dirname, 'dist'),  // 文件输出路径
-        filename: '[name].js',                  // 文件名
-        publicPath: './'                        // html文件内src的路径
-      }
-    };
-
+```
+output: {                                 // 输出
+  path: path.resolve(__dirname, 'dist'),  // 文件输出路径
+  filename: '[name].js',                  // 文件名
+  publicPath: './'                        // html文件内src的路径
+}
+```
 ###  loader
 webpack 自身只理解js和json（webpack1.0版本不支持），loader 可以将其他类型的文件转换为 webpack 能够处理的模块。
 不同类型的文件使用不同的loader，需要先用npm下载安装loader。再将配置信息写在 module.rules。
 
-
-    module: {
-      rules: [
-        { test: /\.txt$/, use: 'raw-loader' },
-        { test: /\.css$/, use: ['style-loader', 'css-loader'] }, //cssloader负责加载css文件，styleloader负责样式添加到dom
-        { test: /\.ts$/, use: 'ts-loader' },
-      ]
-    }
-
+```
+module: {
+  rules: [
+    { test: /\.txt$/, use: 'raw-loader' },
+    { test: /\.css$/, use: ['style-loader', 'css-loader'] }, //cssloader负责加载css文件，styleloader负责样式添加到dom
+    { test: /\.ts$/, use: 'ts-loader' },
+  ]
+}
+```
 loader 有两个属性：
 1.test：识别出哪些文件会被转换。
 2.use：定义出在进行转换时，应该使用哪个 loader。
-一种文件类型使用多个loader时，顺序是从后往前使用，上一个 loader 转换后的资源传递给下一个 loader。因此css必须先调用cssloader，再调用styleloader。
+一种文件类型使用多个loader时，顺序是从后往前使用，上一个 loader 转换后的资源传递给下一个 loader。
+比如css，先调用cssloader解析css文件，再调用styleloader将css放在html文件body的style内。
 
 loader是函数，当webpack解析资源时，会调用相应的loader去处理。函数接收三个参数：
 1.content：文件内容
