--- a/开发环境/3.webpack/3.loader.md
+++ b/开发环境/3.webpack/3.loader.md
@@ -1,7 +1,10 @@
 loader
 ===================
-loader 用于对模块的源代码进行解析转换。一个loader在解析完毕后，会返回解析的结果给到下一个loader。
-因此 loader 允许直接在 JavaScript 模块中 import CSS 文件。
+loader 用于对模块的源代码进行解析转换，需要安装。
+一个loader在解析完毕后，会返回解析的结果给到下一个loader。
+需要配置对象，来说明一种模块要如何进行解析。这个配置对象放在 module.rules 数组内，这个对象包括：
+1. test： 匹配方式（正则）
+2. use： 要使用的所有loader
 
 ### postcss
 将需要打包的 css 文件需要导入到 index.js 中：
@@ -38,21 +41,18 @@ use: ['style-loader', {
 ```
 
 ### 图片和字体
-如果css、html、js使用了图片/字体，也可以进行打包：
+如果css、html、js使用了图片/字体，也需要进行打包：
 ```
 {
     test: /\.(png|svg|jpg|jpeg|gif)$/i,
-    type: 'asset',
+    type: 'asset', //资源
     generator: {
         // 生成图片的配置
-        filename: 'imgs/[name]_[hash:8][ext]'
-        // name: 图片原名
-        // ext: 拓展名
-        // hash：webpack生成的hash，避免图片重名
+        filename: 'imgs/[name]_[hash:8][ext]'// name: 使用图片原名，ext: 使用拓展名，hash：webpack生成的hash，避免图片重名
     }
 },
 ```
-这里使用type是因为webpack5+已经内置了资源的处理，只要说明资源的类型，不需要再下载loader。
+webpack5+已经内置了资源的处理，只要说明是资源类型，不需要再下载loader。
 
 ### babel
 ```
