--- a/开发环境/3.webpack/4.plugin.md
+++ b/开发环境/3.webpack/4.plugin.md
@@ -1,8 +1,9 @@
 插件
 ===
 
-插件是一个具有 apply 方法的 class。
+插件是一个具有 apply 方法的 class类，需要安装。
 apply 方法会被 webpack compiler 调用，并且在整个编译生命周期都可以访问 compiler 对象。
+使用前，需要先引入，使用时new一个实例。
 
 ### clean-webpack-plugin
 删除webpack的output.path中的所有文件。
@@ -22,7 +23,6 @@ module.exports = {
 };
 ```
 ### html-webpack-plugin
-创建html文件。
 安装
 ```
 npm install --D html-webpack-plugin
@@ -42,11 +42,27 @@ module.exports = {
 };
 ```
 
-### copy-webpack-plugin
-copy文件。
+### mini-css-extract-plugin
+抽离css文件。
 安装
 ```
-npm install --D copy-webpack-plugin
+npm install --S mini-css-extract-plugin
+```
+css文件使用loader加载是加载到js文件内的，生产环境需要将css文件抽离出来：
+```
+module:{
+    rules: [
+        {
+        test: /\.css$/,
+        use: [MiniCssExtractPlugin.loader, 'css-loader']
+        }
+    ]
+},
+plugins: [
+    new MiniCssExtractPlugin({
+      filename: 'css/[name].css' // 抽离后的 CSS 输出路径
+    })
+  ],
 ```
 
 ### DefinePlugin
