--- a/开发环境/3.webpack/5.解析路径.md
+++ b/开发环境/3.webpack/5.解析路径.md
@@ -3,24 +3,41 @@
 
 webpack打包文件时，能解析文件内的三种路径：
 1.绝对路径
-2.相对路径
-3.模块路径
-
-### 模块路径
 ```
+import '/file';
+```
+2.相对路径
+```
+import './file';
+```
+3.模块路径
+```
+import 'module'
+
 import { createApp } from 'vue'
 ```
-其中'vue'就是一个模块路径。webpack在寻找时，默认在 resolve.modules 中(node环境就是node_nodules文件夹)的所有目录中检索模块。
-检索到文件可以自动添加拓展名，默认值有'.wasm','mjs','js','json'。其他类型的文件就需要自己写拓展名，或者在配置文件内增加配置，来支持自动添加拓展名。
-检索到文件夹时，会默认使用index文件。
+webpack在寻找时，默认在 resolve.modules 中(node环境就是node_nodules文件夹)的所有目录中检索模块。
 
-**别名**
-配置文件内，可以将路径起名字，后续使用该路径时，就可以使用别名替代。别名写在resolve.alias内：
+### resolve
+帮助寻找模块的配置。
+
+**resolve.alias**
+给路径起名，后续使用该路径时，就可以使用别名替代。
 ```
 resolve: {
     alias: {
-        // 这里配置别名和实际的路径
+        // 路径上上级文件夹可以简写为@符号
+        @: '../..'
     },
 },
 ```
+
+**resolve.extensions**
+配置模块默认后缀，解析时按顺序尝试，自动添加后缀名。
+```
+resolve: {
+    extensions: ['.js', '.json', '.vue'],
+},
+```
+
 
