--- a/Ajax/4.HTTP协议.md
+++ b/Ajax/4.HTTP协议.md
@@ -3,7 +3,7 @@ HTTP协议
 
 ###  简介
 HTTP基于TCP，可以传递任何格式的数据（HTML 文件, 图片文件, 查询结果等）。
-HTTP协议工作于客户端-服务端架构上，浏览器作为HTTP客户端通过URL向HTTP服务端即WEB服务器发送所有请求。Web服务器根据接收到的请求后，向客户端发送响应信息。HTTP默认端口号为80，但是你也可以改为8080或者其他端口。
+HTTP协议工作于客户端-服务端架构上，浏览器作为HTTP客户端通过URL向HTTP服务端即WEB服务器发送所有请求。Web服务器根据接收到的请求后，向客户端发送响应信息。HTTP默认端口号为80，可以改为其他端口。
 
 ###  请求信息结构
 客户端发送一个HTTP请求到服务器的请求消息包括以下格式：请求行（request line）、请求头部（header）、请求数据部分组成。
