--- a/CSS/15.浮动布局.md
+++ b/CSS/15.浮动布局.md
@@ -32,8 +32,5 @@ div::after{
 ### BFC
 块级元素常见会创建BFC的方式包括：html，浮动元素，绝对定位，行内块元素，表格，overflow不为visible，弹性元素，网格元素。
 同一个BFC内的元素，布局会按照文档流来布局，即从上到下排列，margin会折叠。因此，BFC常用于解决：
-1.margin折叠问题——将两个元素放在不同BFC内
-2.浮动高度塌陷——将父元素变为BFC布局。
-BFC的高度如果为auto时，计算方式为：
-1.忽略绝对定位元素高度
-2.计算行和块元素高度
+1.margin折叠问题——将两个元素放在不同BFC内。
+2.浮动元素高度塌陷——将父元素变为BFC布局，BFC 容器会把内部所有浮动元素的高度都算进去，解决高度塌陷。
