--- a/ES6/14.异步函数.md
+++ b/ES6/14.异步函数.md
@@ -50,7 +50,7 @@ function sleep(delay) {
 	});
 }
 
-(async () => {
+async function sleepTime(){
 	let data1 = await sleep(1000);
 	console.log(data1); // 1000
 	let data2 = await sleep(2000);
@@ -58,7 +58,7 @@ function sleep(delay) {
 	let data3 = await Promise.all([sleep(1000),sleep(2000)]);
 	console.log(data3); // [1000, 2000]
 	return data3
-})();
+};
 ```
 await命令就是then命令的语法糖，在 Promise 状态变化后，才会接着往下一行代码执行。
 
@@ -93,19 +93,10 @@ const foo = async () => {};
 ```
 
 **状态变化**
-async 函数返回一个 Promise 对象。状态类似promise.all()，即所有的await都完成，Promise状态为成功；一个await抛出error，则Promise状态为失败。async 函数函数内的返回值data3会作为then的回调函数参数传递。
+async 函数返回一个 Promise 对象。状态类似promise.all()，即所有的await都完成，Promise状态为成功；一个await抛出error，则Promise状态为失败。async 函数内的返回值会作为then的参数。
 
 **await**
-await命令后面需要是一个 Promise 对象，或者有then方法的对象，返回的值是成功的传递值。如果不是，则直接返回对应的值。
+await命令后面需要是一个 Promise 对象，或者有then方法的对象，返回的值是成功的传递值。如果不是，则直接执行，返回await命令后面的值。
 
 **错误处理**
-如果await后的promise失败，则会抛出error。因此，async函数自身应该将await的运行放在try...catch内（async函数自身有catch()也能捕获error）。
-```
-(async () => {
-	try {
-		await f()
-	} catch(err) {
-
-	}
-})();
-``` 
+如果await后的promise失败，则会抛出error，作为整个函数的reject，不再执行后面的await。
