--- a/ES6/18.Proxy.md
+++ b/ES6/18.Proxy.md
@@ -4,7 +4,17 @@ Proxy是一个类，用于创建代理对象。Proxy接受两个参数：
 ```
 let proxy = new Proxy(目标对象, {代理规则对象});
 ```
-对Proxy实例进行的操作，会根据定制的代理规则，也执行到目标对象上。
+对proxy实例进行的操作，会根据定制的代理规则，也执行到目标对象上，因此，所有想要对目标对象的操作，都应该执行在proxy实例上。
+
+```
+let obj = {num: 1};
+let proxy = new Proxy(obj, {
+    get( target, key ){
+        return target[key]
+    }
+});
+console.log(proxy.num) //1
+```
 
 ### 拦截方法
 
@@ -22,3 +32,28 @@ set(target, propKey, newValue, receiver){
     target[propKey] = newValue
 }
 ```
+
+#### has() / deleteProperty()
+has在使用propKey in proxy判断propKey属性是否存在时触发，接收两个参数，依次为目标对象和属性名。
+deleteProperty在delete proxy[propKey]时触发，接收两个参数，依次为目标对象和属性名。
+```
+has(target, propKey){
+    return propKey in target
+}
+deleteProperty(target, propKey){
+    delete target[propKey]
+}
+```
+
+#### ownKeys(target)
+在Object.getOwnPropertyNames(proxy)、Object.getOwnPropertySymbols(proxy)、Object.keys(proxy)、for...in时触发。
+
+#### getPrototypeOf(target) / setPrototypeOf(target, proto)
+在Object.getPrototypeOf(proxy)时触发。
+在Object.setPrototypeOf(proxy, proto)时触发。
+
+#### getOwnPropertyDescriptor(target, propKey)
+在Object.getOwnPropertyDescriptor(proxy, propKey)时触发
+
+#### defineProperty(target, propKey, propDesc)
+在Object.defineProperty(proxy, propKey, propDesc)、Object.defineProperties(proxy, propDescs)时触发
